--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <head>
 <title>Go to my page</title>
 </head>
-<body><a href="webpages.html"></a></body>
+<body><a href="webpages.html"><h2>Click here</h2></a></body>
 </html>
