--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <head>
 <title>Go to my page</title>
 </head>
-<body><a href="webpages/index.html"><h2>Click here</h2></a></body>
+<body><a href="webpage/index.html"><h2>Click here</h2></a></body>
 </html>
